# packapp

./: .env.example  gunicorn.conf.py  pyproject.toml
.github/workflows/: python-cd.yml
.http/bergler/: .env.example  WebShopOrderState.http  WebShopProductAvailable.http  WebShopProductImport copy.http  WebShopProductImport.http
.http/shopify/: .env.example  AssignedFulfillmentOrder.http  Fulfillment.http  FulfillmentRequest.http  FulfillmentService.http  Product.http  order.http
gbaims/packapp/: __init__.py  ctx.py  seed.py
gbaims/packapp/api/: __init__.py  _fetch_stock.py  _fulfillment_order_notification.py
gbaims/packapp/core/: errors.py
gbaims/packapp/io/: config.py
gbaims/packapp/io/bergler/: __init__.py  _bergler.py  _client.py  _config.py  errors.py  utils.py
gbaims/packapp/io/bergler/methods/: order_import.py  product_available.py
gbaims/packapp/io/config/: __init__.py  _config.py  _environment.py  _shopify.py
gbaims/packapp/io/shopify/: __init__.py  _client.py  _config.py  _errors.py  _exceptions.py  _json.py  _shopify.py  fulfillment_service.py
gbaims/packapp/io/shopify/endpoints/: assigned_fulfillment_order.py  fulfillment.py  fulfillment_request.py  fulfillment_service.py  order.py
