[tool.poetry]
name = "gbaims-packapp"
version = "0.1.0"
description = ""
authors = ["Gabriel Baims <gabriel.a.baims@gmail.com>"]
readme = "README.md"
packages = [{include = "gbaims"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
gunicorn = "^20.1.0"
pydantic = {extras = ["dotenv"], version = "^1.10.9"}
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
